--- a/index.html
+++ b/index.html
@@ -1,108 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css'">
 </head>
+
 <body>
     <div class="container">
-
-    <header>
-        <h1>Flexbox Cards Layout stage 1</h1>
-    </header>
-
-    <section class="item-list">
-
-        <div id="hover" class="item item1">
-
-            <img src="ahv.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 1</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+        <header>
+            <h1>Flexbox Cards Layout stage 1</h1>
+        </header>
+        <section class="item-list">
+            <div id="hover" class="item item1">
+            <img src="ahv.jpg">
+        <div class="item-text">
+                <h2>Item 1</h2>
+                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
         <div id="hover" class="item item2">
-
-            <img src="karvane.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 2</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+            <img src="karvane.jpg">
+                <div class="item-text">
+                <h2>Item 2</h2>
+                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                    </div>
+                </div>
+            <div id="hover" class="item item3">
+                <img src="kass.jpg">
+                    <div class="item-text">
+                    <h2>Item 3</h2>
+                    <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
-        <div id="hover" class="item item3">
-
-            <img src="kass.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 3</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+            <div id="hover" class="item item4">
+                <img src="laisk.jpg">
+                <div class="item-text">
+                    <h2>Item 4</h2>
+                    <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
-        <div id="hover" class="item item4">
-
-            <img src="laisk.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 4</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+            <div id="hover" class="item item5">
+                <img src="panda.webp">
+                <div class="item-text">
+                    <h2>Item 5</h2>
+                    <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
-        <div id="hover" class="item item5">
-
-            <img src="panda.webp" alt="">
-
-            <div class="item-text">
-
-                <h2>item 5</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+            <div id="hover" class="item item6">
+                <img src="tiiger.jpg">
+                <div class="item-text">
+                    <h2>Item 6</h2>
+                    <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
-        <div id="hover" class="item item6">
-
-            <img src="tiiger.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 6</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
+            <div id="hover" class="item item7">
+                <img src="orav.jpg">
+                <div class="item-text">
+                    <h2>Item 7</h2>
+                    <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.</p>
+                </div>
             </div>
-        </div>
-        <div id="hover" class="item item7">
-
-            <img src="orav.jpg" alt="">
-
-            <div class="item-text">
-
-                <h2>item 7</h2>
-
-                <p>Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met its things. Narrow enough sex moment desire are. Hold who what come that seen read age its. Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an. Design on longer thrown oppose am.
-                </p>
-            </div>
-        </div>
-    </section>
-
+        </section>
     </div>
-
 </body>
+
 </html>
+                
